--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <title>This is main branch</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    
+    <ul>
+        <li>
+            <a href="#">home</a>
+        </li>
+        <li>
+            <a href="#">services</a>
+        </li>
+        <li>
+            <a href="#">about</a>
+        </li>
+    </ul>
 </body>
 </html>
