--- a/index.html
+++ b/index.html
@@ -2,9 +2,41 @@
 <html lang="en">
 <head>
     <title>This is main branch</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    
+    <ul class="parent">
+        <li>
+            <a href="#">Home</a>
+        </li>
+        <li>
+            <a href="#">Services</a>
+            <ul>
+                <li>
+                    <a href="#">Services1</a>
+                    </li>
+                <li>
+                    <a href="#">Services2</a>
+                </li>
+                 <li>
+                    <a href="#">Services3</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="#">About</a>
+            <ul>
+                <li>
+                    <a href="#">About1</a>
+                    </li>
+                <li>
+                    <a href="#">About2</a>
+                </li>
+                 <li>
+                    <a href="#">About3</a>
+                </li>
+            </ul>
+        </li>
+    </ul>
 </body>
 </html>
