--- a/index.html
+++ b/index.html
@@ -2,9 +2,113 @@
 <html lang="en">
 <head>
     <title>This is main branch</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    
+    <ul class="parent">
+        <li>
+            <a href="#">Home</a>
+        </li>
+        <li>
+            <a href="#">Services</a>
+            <ul>
+                <li>
+                    <a href="#">Services1</a>
+                </li>
+                <li>
+                    <a href="#">Services2</a>
+                </li>
+                <li>
+                    <a href="#">Services3</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="#">About</a>
+            <ul>
+                <li>
+                    <a href="#">About1</a>
+                </li>
+                <li>
+                    <a href="#">About2</a>
+                </li>
+                <li>
+                    <a href="#">About3</a>
+                </li>
+            </ul>
+        </li>
+    </ul>
+    <div class="header"></div>
+
+    <div class="content">
+        <ul class="products">
+            <li>
+                <p>CEAT bat</p>
+                <p class="child">rs.1600</p>
+                <img src="images/ceat.jpg">
+                <button>add to cart</button>
+            </li>
+            <li>
+                <p>mrf bat</p>
+                <p class="child">rs.1400</p>
+                <img src="images/mrf.jpg">
+                <button>add to cart</button>
+            </li>
+            <li>
+                <p>SS bat</p>
+                <p class="child">rs.1200</p>
+                <img src="images/ss.jpg">
+                <button>add to cart</button>
+            </li>
+            <li>
+                <p>SS bat</p>
+                <p class="child">rs.1400</p>
+                <img src="images/SS1.jpg">
+                <button>add to cart</button>
+            </li>
+            <li>
+                <p>SS bat</p>
+                <p class="child">rs.1100</p>
+                <img src="images/SS2.jpg">
+                <button>add to cart</button>
+            </li>
+            <li>
+                <p>SS bat</p>
+                <p class="child">rs.900</p>
+                <img src="images/SS3.jpg">
+                <button>add to cart</button>
+            </li>
+            <li>
+                <p>TON bat</p>
+                <p class="child">rs.1670</p>
+                <img src="images/TON.jpg">
+                <button>add to cart</button>
+            </li>
+            <li>
+                <p>TON bat</p>
+                <p class="child">rs.1699</p>
+                <img src="images/TON1.jpg">
+                <button>add to cart</button>
+            </li>
+            <li>
+                <p>Strauss bat</p>
+                <p class="child">rs.4600</p>
+                <img src="images/stra.webp">
+                <button>add to cart</button>
+            </li>
+            <li>
+                <p>SG bat</p>
+                <p class="child">rs.3600</p>
+                <img src="images/sg.jpg">
+                <button>add to cart</button>
+            </li>
+            <li>
+                <p>ADIDAS bat</p>
+                <p class="child">rs.1000</p>
+                <img src="images/ADIDAS.jpg">
+                <button>add to cart</button>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
